fixes some problems with the custom implentation; the font-size: small rule ensures the caret :after for a dropdown menu does not affect the sizing of its parent box, which was causing bad vertical alignment of links in the horizontal menu.

--- a/src/menus/css/menus-dropdown.css
+++ b/src/menus/css/menus-dropdown.css
@@ -33,6 +33,7 @@
 .pure-menu-has-children > .pure-menu-link:after {
     padding-left: 0.5em;
     content: "\25B8";
+    font-size: small;
 }
 
 /* Horizontal Menus - show the dropdown arrow */
